# regl

./: README.md  stack.yaml
ideas/: README.md  scratch.hs
ideas/streaming/Data/Regex/: Streaming.hs
ideas/streaming/Data/Regex/DFA/: Analysis.hs
ideas/vm/: NFALike.hs
notes/streaming/Data/Regex/Internal/: DistanceBound.hs
notes/streaming/Data/Regex/Mono/: Analysis.hs
notes/streaming/Data/Regex/Streaming/: HFA.hs
notes/vm/: VM.hs
regl/: regl.cabal
regl-conduit/: regl-conduit.cabal
regl-conduit/demo/: Main.hs
regl-conduit/src/Data/Conduit/: Regex.hs
regl-demo/: regl-demo.cabal
regl-demo/exe/grep/: Main.hs  Parse.hs
regl-demo/exe/match/: Main.hs  Regex.hs
regl-demo/exe/search/: Main.hs  Regex.hs
regl-heavy-duty/: regl-heavy-duty.cabal
regl-heavy-duty/demo/grep/: Main.hs  Parse.hs
regl-heavy-duty/src/Data/Regex/: HeavyDuty.hs
regl-heavy-duty/src/Data/Regex/HeavyDuty/: Combinators.hs  DFA.hs
regl/benchmarks/: Benchmarks.hs
regl/src/Data/: BooleanAlgebra.hs  ByteSet.hs  KleeneAlgebra.hs
regl/src/Data/Regex/: DFA.hs  Mono.hs  NFA.hs  Poly.hs
regl/src/Data/Regex/DFA/: Core.hs  Match.hs  Streaming.hs
regl/src/Data/Regex/DFA/Streaming/: Buffer.hs
regl/src/Data/Regex/Mono/: Combinators.hs  Core.hs  Pretty.hs  ToPoly.hs
regl/src/Data/Regex/Mono/Combinators/: Char.hs
regl/src/Data/Regex/NFA/: Core.hs
regl/src/Data/Regex/Poly/: Combinators.hs  Core.hs  Matcher.hs  ToMono.hs
regl/src/Data/Regex/Poly/Combinators/: Char.hs  General.hs
regl/src/Data/Semiring/: Extra.hs
regl/tests/: Tests.hs
